--- a/deployment.yaml
+++ b/deployment.yaml
@@ -3,28 +3,29 @@ kind: Deployment
 metadata:
   name: th3
 spec:
+  replicas: 3
   selector:
     matchLabels:
       app: th3
-  replicas: 3
   template:
     metadata:
+      annotations:
+        linkerd.io/inject: enabled
       labels:
         app: th3
     spec:
       containers:
-        - name: th3
-          image: craigmdupree/th3:0.0.1
-          livenessProbe:
-            failureThreshold: 10
-            httpGet:
-              # really would have a specific endpoint for this that would accurately tell us the container status
-              path: /version
-              port: 8080
-              scheme: HTTP
-            initialDelaySeconds: 30
-            periodSeconds: 60
-            successThreshold: 1
-            timeoutSeconds: 30
-          ports:
-            - containerPort: 8000
+      - image: craigmdupree/th3:0.0.1
+        livenessProbe:
+          failureThreshold: 10
+          httpGet:
+            path: /version
+            port: 8080
+            scheme: HTTP
+          initialDelaySeconds: 30
+          periodSeconds: 60
+          successThreshold: 1
+          timeoutSeconds: 30
+        name: th3
+        ports:
+        - containerPort: 8000
